# ccm

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README_zh.md  build.rs
.cargo/: config.toml.example
.github/workflows/: release.yml
.kiro/settings/: lsp.json
docs/: ENCRYPTION_FLOW.md  QUICKSTART.md  vcpkg-openssl-static-linking.md
src/: main.rs
src/auth/: mod.rs  pin.rs
src/commands/: add.rs  auth.rs  config.rs  delete.rs  export.rs  get.rs  help.rs  import.rs  list.rs  mod.rs  preset.rs  search.rs  set.rs  stats.rs  update.rs  use_cmd.rs  version.rs
src/core/: initialization.rs  mod.rs
src/db/: migration.rs  mod.rs  mod.rs.bak  mod.rs.orig  mod.rs.rej
src/env/: mod.rs
src/presets/: mod.rs
src/secrets/: master_key.rs  mod.rs
src/types/: mod.rs
src/utils/: clipboard.rs  crypto.rs  csv_parser.rs  debug.rs  errors.rs  mod.rs  validation.rs
tests/: test_encryption.sh
tests/fixtures/: README.md
tests/fixtures/csv/: chrome-format.csv  edge-cases.csv  edge-format.csv  firefox-format.csv  generic-format.csv  safari-format.csv  special-characters.csv  unicode-utf8.csv  windows-crlf.csv
tests/fixtures/json/: all-entry-types.json  complete-backup.json  edge-cases.json  encrypted-backup-template.json  minimal-backup.json  special-characters.json
tests/scripts/: export_test.bat  export_test.ps1  import_test.bat  import_test.ps1  test.bat  test.ps1
